--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -247,6 +247,7 @@
                     usuario.Nickname = datos.Nombre;
                     usuario.SteamAccountLastCheck = DateTime.Now.ToString();
                     usuario.OfficialGroup = datos.GrupoPremium;
+                    usuario.OfficialGroup2 = datos.GrupoNormal;
 
                     await UserManager.UpdateAsync(usuario);
                 }
