--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -299,6 +299,7 @@
 					usuario.Nickname = datos.Nombre;
 					usuario.SteamAccountLastCheck = DateTime.Now.ToString();
 					usuario.OfficialGroup = datos.GrupoPremium;
+					usuario.OfficialGroup2 = datos.GrupoNormal;
 
 					await UserManager.UpdateAsync(usuario);
 				}
