--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -176,7 +176,7 @@
 
 					<div class="tooltip-abrir tooltip-abajo" style="padding: 20px; width: 100%;">
 						<div style="display: flex; margin-bottom: 10px;">
-							<img src="@CargarDRM(destacado)" style="width: 20px; height: 20px; margin-right: 20px;" />
+							<img src="@CargarDRM(destacado)" style="max-width: 20px; max-height: 20px; margin-right: 20px;" />
 							<img src="@CargarIconoTienda(destacado)" style="width: 20px; height: 20px;" />
 						</div>
 						<labelx>@CargarFechaDetectado(destacado)</labelx>
