--- a/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Sorteos.razor
@@ -1,6 +1,7 @@
 ﻿@using APIs.Steam
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
+@using Microsoft.Data.SqlClient
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
 @inject UserManager<Usuario> UserManager
@@ -9,33 +10,33 @@
 
 @if (sorteosGrupoNormal != null)
 {
-    if (sorteosGrupoNormal.Count > 0)
-    {
-        <div style="font-size: 23px; display: flex; align-items: center;">
-            <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")</label>
+    <div style="font-size: 23px; display: flex; align-items: center;">
+        <label>@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String2")</label>
 
-            @if (usuario != null)
+        @if (usuario != null)
+        {
+            if (string.IsNullOrEmpty(usuario.OfficialGroup2) == false)
             {
-                if (string.IsNullOrEmpty(usuario.OfficialGroup2) == false)
+                if (usuario.OfficialGroup2.ToLower() == "true")
                 {
-                    if (usuario.OfficialGroup2.ToLower() == "true")
-                    {
-                        <label style="font-size: 15px; margin-left: 20px;">(@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String5"))</label>
-                    }
-                    else
-                    {
-                        <label style="font-size: 15px; margin-left: 20px;">(@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String6"))</label>
-                    }
+                    <label style="font-size: 15px; margin-left: 20px;">(@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String5"))</label>
                 }
                 else
                 {
                     <label style="font-size: 15px; margin-left: 20px;">(@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String6"))</label>
                 }
             }
-        </div>
+            else
+            {
+                <label style="font-size: 15px; margin-left: 20px;">(@Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String6"))</label>
+            }
+        }
+    </div>
 
-        <hr/>
+    <hr />
 
+    if (sorteosGrupoNormal.Count > 0)
+    {      
         <div class="perfil">
             @foreach (var sorteo in sorteosGrupoNormal)
             {
@@ -73,7 +74,7 @@
 
                                         @if (sorteo.TieneJuego == true)
                                         {
-                                            <div style="margin-left: 20px;">test</div>
+                                            <div style="margin-left: 10px;">• @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String7")</div>
                                         }
                                     </div>                                    
                                 </div>
@@ -82,6 +83,12 @@
                     }                    
                 }
             }
+        </div>
+    }
+    else
+    {
+        <div>
+            @Herramientas.Idiomas.CogerCadena(idioma, "Giveaways.String8")
         </div>
     }
 }
@@ -233,7 +240,6 @@
                 }
             }
         }
-
     }
 
     private string CalcularParticipantes(Sorteos2.Sorteo sorteo)
@@ -265,9 +271,51 @@
 
     private void Entrar(MouseEventArgs e, JuegoSorteo sorteo)
     {
-        if (sorteo != null)
+        if (sorteo != null && usuario != null)
         {
+            if (sorteo.PuedeParticipar == true && sorteo.TieneJuego == false)
+            {
+                SqlConnection conexion = Herramientas.BaseDatos.Conectar();
 
+                using (conexion)
+                {
+                    Sorteos2.Sorteo sorteoEntrar = BaseDatos.Sorteos.Buscar.Uno(sorteo.Sorteo.Id.ToString());
+
+                    bool añadirParticipante = true;
+
+                    if (sorteoEntrar.Participantes != null)
+                    {
+                        if (sorteoEntrar.Participantes.Count > 0)
+                        {
+                            foreach (var participante in sorteoEntrar.Participantes)
+                            {
+                                if (participante == usuario.Id)
+                                {
+                                    añadirParticipante = false;
+                                }
+                            }
+                        }
+                    }
+
+                    if (añadirParticipante == true)
+                    {
+                        if (sorteoEntrar.Participantes == null)
+                        {
+                            sorteoEntrar.Participantes = new List<string>();
+                        }
+
+                        sorteoEntrar.Participantes.Add(usuario.Id);
+                    }
+                    else
+                    {
+                        sorteoEntrar.Participantes.Remove(usuario.Id);
+                    }
+
+                    BaseDatos.Sorteos.Actualizar.Participante(sorteoEntrar, conexion);
+                }
+
+                conexion.Dispose();
+            }
         }
     }
 
