--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -1087,7 +1087,9 @@
 				}
 
 				nuevoTexto = nuevoTexto.Replace("(Steam)", null);
+				nuevoTexto = nuevoTexto.Replace("(STEAM)", null);
 				nuevoTexto = nuevoTexto.Replace("(Epic)", null);
+				nuevoTexto = nuevoTexto.Replace("(EPIC)", null);
 				nuevoTexto = nuevoTexto.Replace("(GOG)", null);
 				nuevoTexto = nuevoTexto.Replace("(Giants)", null);
 				nuevoTexto = nuevoTexto.Replace("(Microsoft Store)", null);
