--- a/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
@@ -116,7 +116,7 @@
 	{
 		if (texto.Value.ToString().Trim().Length > 1)
 		{
-			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim());
+			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim(), 250);
 		}
 		else
 		{
