--- a/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
@@ -88,8 +88,8 @@
 
 				<hr/>
 
-				<div style="display: flex; margin-top: 20px; width: 20%;">
-					<button @onclick="@(e => AñadirJuego(e))" class="boton-pequeño" style="text-align: center;">Añadir Gratis</button>
+				<div style="display: flex; margin-top: 40px; width: 33%;">
+					<button @onclick="@(e => AñadirJuego(e))" class="boton" style="text-align: center;">Añadir Gratis</button>
 				</div>
 			</div>
 		</div>	
