--- a/pepeizqs deals web/Pages/Componentes/Admin/Sorteos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Sorteos.razor
@@ -68,8 +68,8 @@
 
 				<hr />
 
-				<div style="display: flex; margin-top: 20px; width: 20%;">
-					<button @onclick="@(e => AñadirSorteo(e))" class="boton-pequeño" style="text-align: center;">Añadir Sorteo</button>
+				<div style="display: flex; margin-top: 40px; width: 33%;">
+					<button @onclick="@(e => AñadirSorteo(e))" class="boton" style="text-align: center;">Añadir Sorteo</button>
 				</div>
 			</div>
 		</div>
