--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
@@ -164,8 +164,8 @@
 
 		<hr/>
 
-		<div style="display: flex; margin-top: 20px; width: 20%;">
-			<button @onclick="@(e => AñadirBundle(e))" class="boton-pequeño" style="text-align: center;">Añadir Bundle</button>
+		<div style="display: flex; margin-top: 40px; width: 33%;">
+			<button @onclick="@(e => AñadirBundle(e))" class="boton" style="text-align: center;">Añadir Bundle</button>
 		</div>
 	}
 	
