--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -235,8 +235,8 @@
 
 	<hr />
 
-	<div style="display: flex; margin-top: 20px; width: 20%;">
-		<button @onclick="@(e => AñadirNoticia(e))" class="boton-pequeño" style="text-align: center;">Añadir Noticia</button>
+	<div style="display: flex; margin-top: 40px; width: 33%;">
+		<button @onclick="@(e => AñadirNoticia(e))" class="boton" style="text-align: center;">Añadir Noticia</button>
 	</div>
 </div>
 
