--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -235,7 +235,7 @@
 		if (texto.Value.ToString().Trim().Length > 2)
 		{
 			cadenaBusqueda = texto.Value.ToString().Trim();
-			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda, conexion);
+			juegosBuscador = BaseDatos.Juegos.Buscar.Nombre(cadenaBusqueda, conexion, 250);
 		}
 		else
 		{
